--- a/NaKaremati/NaKaremati_solution/NaKaremati/Web.config
+++ b/NaKaremati/NaKaremati_solution/NaKaremati/Web.config
@@ -78,4 +78,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="NaKarematiEntities" connectionString="metadata=res://*/Models.TestDataModel.csdl|res://*/Models.TestDataModel.ssdl|res://*/Models.TestDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\NaKaremati.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
